2004-02-09  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c, interface/w32g_subwin3.c,
	  interface/w32g_res.h, interface/w32g_res.rc:
	  Fix Win32GUI preference window.

2004-02-09  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1:
	  Update man page of timidity.1
	* timidity/playmidi.c (select_play_sample):
	  Fix determination method of frequency for sample selection

2004-02-08  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/sndfont.c: Fix cfgforsf.

2004-02-08  Saito <saito2@digitalme.com>

	* interface/w32g_tracer.bmp, interface/w32g_subwin3.c,
	  timidity/playmidi.c:
	  Change tracer window.
	* configs/msc[67]-project.zip:
	  Fix projects for cfgforsf.

2004-02-07  Saito <saito2@digitalme.com>

	* timidity/sysdep.h:
	  Add some #pragma warning for VC environment.
	* interface/w32g_tracer.bmp:
	  Fix.

2004-02-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/calcnewt.c: Fix to fit with Cygwin

2004-02-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configs/Makefile.{am,in}:
	  Rename entry for msc-project[67].zip to msc[67]-project.zip
	  Rename entry for msc-sjis.txt to msc6-sjis.txt
	  Add entry for msc7-sjis.txt
	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1:
	  Update man page of timidity.1
	* timidity/playmidi.c (get_play_note_ratio): Fix bug
	* timidity/timidity.c (parse_opt_h):
	  Rewrite help message for --module

2004-02-06  Kouji 'kekyo' Suzuki <k@kekyo.net>
	* configs/msc[67]-project.zip, msc6-sjis.txt: Rename
	* configs/msc7-sjis.txt: Add
	* interface/rtsyn_common.c, timidity/calcnewt.c:
	  Fix to fit with Visual C++ 7.0

2004-02-05  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configs/Makefile.{am,in}:
	  Delete entry for msc-project.zip
	  Add entry for msc-project[67].zip

2004-02-05  Kouji 'kekyo' Suzuki <k@kekyo.net>

	* configs/msc-project.zip:
	  Remove this file.
	* configs/msc-project6.zip, configs/msc-project7.zip:
	  Add files.
	* interface/rtsyn_winmm.c, interface/w32g_pref.c,